--- a/templates/index.html
+++ b/templates/index.html
@@ -1,33 +1,26 @@
 {% extends "base.html" %}
-{% let title = "Axhat Stack Template" %}
 
 {% block title %}{{ title }}{% endblock %}
 
 {% block head %}
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/@tailwindcss/typography@0.5.0/dist/typography.min.css" rel="stylesheet">
 <script src="https://unpkg.com/htmx.org@1.9.12"></script>
-<style>
-    body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 0;
-        background: #f7fafc;
-    }
-</style>
 {% endblock %}
 
 {% block content %}
-<div class="max-w-4xl mx-auto p-6 bg-white shadow-lg rounded-lg">
-    <article class="prose mx-auto mb-8">
+<div class="max-w-5xl mx-auto p-4 bg-white shadow-lg">
+    <div class="mb-8">
         <h1 class="text-center">{{ title }}</h1>
         <p class="text-center text-gray-600">This README is dynamically loaded from the project.</p>
-        {{ readme|safe }}
+        <article class="prose mx-auto mt-4">
+            {{ readme|safe }}
+        </article>
         <p class="text-center mt-4">
             <a href="https://github.com/tm26a21p/axhat-stack-template" class="text-blue-500 hover:underline">View
                 this template on GitHub</a>
         </p>
-    </article>
+    </div>
 
     <div class="text-center">
         <h2 class="text-3xl font-bold mb-6">Example:</h2>
@@ -45,7 +38,7 @@
 
         <div class="mb-8">
             <h3 class="text-xl font-semibold mb-4">Interactive Section</h3>
-            <button hx-get="/more-content" hx-target="#more-content ul" hx-swap="beforeend"
+            <button hx-get="/more-content" hx-target="#more-content" hx-swap="beforeend"
                 class="bg-green-500 hover:bg-green-700 text-white font-bold py-3 px-6 rounded-lg">
                 Load More Content
             </button>
