--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+    <link href="public/tailwind_generated.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{{ title }}{% endblock %}</title>
     {% block head %}{% endblock %}
 </head>
