--- a/templates/base.html
+++ b/templates/base.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <link href="public/tailwind_generated.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="public/tailwind_generated.css" rel="stylesheet">
+    <script src="https://unpkg.com/htmx.org@1.9.12"></script>
     <title>{% block title %}{{ title }}{% endblock %}</title>
-    {% block head %}{% endblock %}
 </head>
 
 <body class="bg-gray-50 text-gray-900 font-sans">
